# COCOS

./: .gitignore  CMakeLists.txt  COCOS.cpp  COCOShpc.cpp  Calibrate.cpp  Compare.cpp  Makefile  README.md  settings.txt  settings_RENAME!.txt
include/: Header.hpp  Logger.hpp  PtuFile.hpp  Settings.hpp
src/: Header.cpp  Logger.cpp  PtuFile.cpp  Settings.cpp
src_exe/: COCOS.cpp  COCOS_per_record.cpp  COCOS_per_record_med.cpp  COCOS_per_record_neu.cpp  COCOS_per_time.cpp  COCOSdt_vun_hpc.cpp  COCOShpc.cpp  COCOSoutfile.cpp  Intensity.cpp  JobcreatorHPC.cpp  JobcreatorOutfile.cpp  Jobs_per_record.cpp  Jobs_per_time.cpp  split_ptu.cpp
